--- a/local.properties
+++ b/local.properties
@@ -8,3 +8,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 sdk.dir=/home/team-rsl/Android/Sdk
+
+version = 0.0
