--- a/.github/workflows/myTestWorkflow.yml
+++ b/.github/workflows/myTestWorkflow.yml
@@ -28,5 +28,11 @@ jobs:
             version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
             echo "VERSION: $version"
 
+     - name: Update README Badge
+       run: |
+            sed -i 's/\(badge\/version-v[0-9]\+\(\.[0-9])-blue\.svg)/badge\/version-v${{ steps.version.outputs.VERSION }}-blue.svg/' README.md
+            cat README.md  # Print README content for debugging
+
+
 
 
