--- a/.github/workflows/myTestWorkflow.yml
+++ b/.github/workflows/myTestWorkflow.yml
@@ -30,6 +30,7 @@ jobs:
 
      - name: Update README Badge
        run: |
+            echo "VERSION: $version"
             sed -i 's/\(badge\/version-v[0-9]\+\(\.[0-9]\+\)-blue\.svg\)/badge\/version-v${{ steps.version.outputs.VERSION }}-blue.svg/' README.md
             cat README.md
 
