--- a/.github/workflows/myTestWorkflow.yml
+++ b/.github/workflows/myTestWorkflow.yml
@@ -22,16 +22,17 @@ jobs:
           distribution: 'adopt'
           java-version: '11'
 
-     - name: Read Version Number
-       id: version
-       run: |
-            version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
-            echo "VERSION: $version"
+#     - name: Read Version Number
+#       id: version
+#       run: |
+#            version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
+#            echo "VERSION: $version"
 
      - name: Update README Badge
-       run: |
-            echo "VERSION: ${{ steps.version.outputs.VERSION }}"
-            sed -i 's/\(badge\/version-v[0-9]\+\(\.[0-9]\+\)-blue\.svg\)/badge\/version-v${{ steps.version.outputs.VERSION }}-blue.svg/' README.md
+       run: |           
+            version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
+            echo "VERSION: $version"
+            sed -i 's/\(badge\/version-v[0-9]\+\(\.[0-9]\+\)-blue\.svg\)/badge\/version-v${{ version }}-blue.svg/' README.md
             cat README.md
 
 
