--- a/.github/workflows/myTestWorkflow.yml
+++ b/.github/workflows/myTestWorkflow.yml
@@ -32,7 +32,7 @@ jobs:
        run: |           
             version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
             echo "VERSION: $version"
-            sed -i 's/\(badge\/version-v[0-9]\+\(\.[0-9]\+\)-blue\.svg\)/badge\/version-v${{ version }}-blue.svg/' README.md
+            sed -i 's/\(badge\/version-v[0-9]\+\(\.[0-9]\+\)-blue\.svg\)/badge\/version-v$version-blue.svg/' README.md
             cat README.md
 
 
