--- a/.github/workflows/myTestWorkflow.yml
+++ b/.github/workflows/myTestWorkflow.yml
@@ -2,8 +2,8 @@ name: My test workflow
 
 on:
   push:
-    paths:
-      - 'gradle.properties'
+#    paths:
+#      - 'gradle.properties'
 
 jobs:
   update-badge:
@@ -32,6 +32,7 @@ jobs:
        run: |           
             version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
             echo "VERSION: $version"
+            echo "badge\/version-v$version-blue.svg"
             sed -i 's/\(badge\/version-v[0-9]\+\(\.[0-9]\+\)-blue\.svg\)/badge\/version-v$version-blue.svg/' README.md
             cat README.md
 
