--- a/.github/workflows/myTestWorkflow.yml
+++ b/.github/workflows/myTestWorkflow.yml
@@ -33,7 +33,7 @@ jobs:
             version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
             echo "VERSION: $version"
             echo "badge\/version-v$version-blue.svg"
-            sed -i 's/\(badge\/version-v[0-9]\+\(\.[0-9]\+\)-blue\.svg\)/badge\/version-v$version-blue.svg/' README.md
+            sed -i 's/\(badge\/version-v[0-9]\.[0-9]-blue\.svg\)/badge\/version-v$version-blue.svg/' README.md
             cat README.md
 
 
