--- a/.github/workflows/myTestWorkflow.yml
+++ b/.github/workflows/myTestWorkflow.yml
@@ -41,7 +41,6 @@ jobs:
             git add .
 
      - name: Commit and Push Changes
-       if: steps.git-check.outputs.changes_detected == 'true'
        run: |
             git config user.name "${{ github.actor }}"
             git config user.email "${{ github.actor }}@users.noreply.github.com"
@@ -50,6 +49,7 @@ jobs:
             git commit -m "Update version badge [skip ci]"
             git push
 
+# if: steps.git-check.outputs.changes_detected == 'true'
   
 
 
