--- a/.github/workflows/myTestWorkflow.yml
+++ b/.github/workflows/myTestWorkflow.yml
@@ -11,6 +11,7 @@ jobs:
 
     permissions:
       issues: write
+      contents: write
       pull-requests: write
     steps:
      - name: Checkout Repository
