--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
 
     permissions:
       issues: write
-#      contents: write
+      contents: write
       pull-requests: write
     steps:
      - name: Checkout Repository
