--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: My test workflow
 
 on:
   push:
-#    paths:
- #     - 'gradle.properties'
+    paths:
+      - 'gradle.properties'
 
 jobs:
   update-badge:
@@ -32,26 +32,18 @@ jobs:
      - name: Update README Badge
        run: |           
             version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
-            echo "VERSION: $version"
-            echo "badge\/version-v$version-blue.svg"
+            # echo "VERSION: $version"
+            # echo "badge\/version-v$version-blue.svg"
             sed -i "s/\(badge\/version-v[0-9]\.[0-9]-blue\.svg\)/badge\/version-v$version-blue.svg/" README.md
             cat README.md
 
-     - name: Stash changes
-       run: |
-            git add .
-
      - name: Commit and Push Changes
        run: |
-
             git config user.name github-actions
             git config user.email github-actions@github.com
-            # git remote set-url origin "https://${{ secrets.ACTOR_TOKEN2 }}@github.com/${{ github.repository }}"
             git add README.md
-            git commit -m "Update version badge [skip ci]"
+            git commit -m "Update version badge"
             git push
-
-### if: steps.git-check.outputs.changes_detected == 'true'
   
 
 
