--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,11 @@ jobs:
      - name: Checkout Repository
        uses: actions/checkout@v2
 
-     - name: Set up Java
-       uses: actions/setup-java@v2
-       with:
-          distribution: 'adopt'
-          java-version: '11'
+#     - name: Set up Java
+#       uses: actions/setup-java@v2
+#       with:
+#          distribution: 'adopt'
+#          java-version: '11'
 
 #     - name: Read Version Number
 #       id: version
