--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      issues: write
+#      issues: write
       contents: write
-      pull-requests: write
+#      pull-requests: write
     steps:
      - name: Checkout Repository
        uses: actions/checkout@v2
