--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
         id: create-pr
         uses: peter-evans/create-pull-request@v5
         with:
-          base: master
+          base: main
           branch: github-actions/readme-update
           delete-branch: true
           author: ${{ github.actor }} <${{ github.actor }}@linkedin.com>
