--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,4 +64,4 @@ jobs:
           --repo ${{ github.repository }}
           ${{ steps.create-pr.outputs.pull-request-number }}
         env:
-          GITHUB_TOKEN: ${{ secrets.SVC_VA_GHA_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
