--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,6 @@ env:
 jobs:
   update-badge:
     runs-on: ubuntu-latest
-    #        if: "grep '^version=' gradle.properties"
 
     permissions:
       #      issues: write
@@ -42,11 +41,14 @@ jobs:
 
       - name: Update README Badge
         run: |
+          if git diff ${{  github.base_ref }}..${{ github.sha }} | grep 'version=';then
+          echo "pass"
           version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
           # echo "VERSION: $version"
           # echo "badge\/version-v$version-blue.svg"
           sed -i "s/\(badge\/version-v[0-9]\.[0-9]-blue\.svg\)/badge\/version-v$version-blue.svg/" README.md
           cat README.md
+          else echo "fail"
 
       - name: Create PR
         id: create-pr
