--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,19 +39,30 @@ jobs:
       #            version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
       #            echo "VERSION: $version"
 
+      - name: Get previous version
+        id: get-previous-version
+        run: |
+          echo "::set-output name=prev_version::$(git show HEAD:gradle.properties | grep '^version' | cut -d= -f2 | tr -d '[:space:]')"
+
+      - name: Get current version
+        id: get-current-version
+        run: |
+          echo "::set-output name=current_version::$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')"
+
+      - name: Check for version change
+        run: |
+          if [ "${{ steps.get-previous-version.outputs.prev_version }}" == "${{ steps.get-current-version.outputs.current_version }}" ]; then
+            echo "No version change. Exiting workflow."
+            exit 0
+          fi
+
       - name: Update README Badge
         run: |
-          echo "diff output: ${{git status}}"
-          if $diff_output | grep '^version ='; then
-            echo "pass"
-            version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
-            # echo "VERSION: $version"
-            # echo "badge\/version-v$version-blue.svg"
-            sed -i "s/\(badge\/version-v[0-9]\.[0-9]-blue\.svg\)/badge\/version-v$version-blue.svg/" README.md
-            cat README.md
-          else
-            echo "fail"
-          fi
+          version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
+          # echo "VERSION: $version"
+          # echo "badge\/version-v$version-blue.svg"
+          sed -i "s/\(badge\/version-v[0-9]\.[0-9]-blue\.svg\)/badge\/version-v$version-blue.svg/" README.md
+          cat README.md
 
       - name: Create PR
         id: create-pr
