--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,9 @@ jobs:
 
       - name: Check for version change
         run: |
-          if [ "${{ steps.get-previous-version.outputs.prev_version }}" == "${{ steps.get-current-version.outputs.current_version }}" ]; then
+          echo "Previous version: ${{ steps.get-previous-version.outputs.prev_version }}"
+          echo "Current version: ${{ steps.get-current-version.outputs.current_version }}"
+          if [ "${{ steps.get-previous-version.outputs.prev_version }}" = "${{ steps.get-current-version.outputs.current_version }}" ]; then
             echo "No version change. Exiting workflow."
             exit 0
           fi
