--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,29 +20,21 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      #      issues: write
       contents: write
       pull-requests: write
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      #     - name: Set up Java
-      #       uses: actions/setup-java@v2
-      #       with:
-      #          distribution: 'adopt'
-      #          java-version: '11'
-
-      #     - name: Read Version Number
-      #       id: version
-      #       run: |
-      #            version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
-      #            echo "VERSION: $version"
-
       - name: Get previous version
         id: get-previous-version
         run: |
-          echo "::set-output name=prev_version::$(git diff HEAD^..HEAD -- gradle.properties | grep '^[-+]' | grep '^-' | grep '^version' | cut -d= -f2 | tr -d '[:space:]')"
+          log_result=$(git log --format="%h" -n 2 -- gradle.properties)
+          echo "Git log result: $log_result"
+          
+          previous_version=$(echo "$log_result" | tail -n 1 | xargs git show | grep '^version' | cut -d= -f2 | tr -d '[:space:]')
+          echo "::set-output name=prev_version::$previous_version"
+
       - name: Get current version
         id: get-current-version
         run: |
@@ -60,8 +52,6 @@ jobs:
       - name: Update README Badge
         run: |
           version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
-          # echo "VERSION: $version"
-          # echo "badge\/version-v$version-blue.svg"
           sed -i "s/\(badge\/version-v[0-9]\.[0-9]-blue\.svg\)/badge\/version-v$version-blue.svg/" README.md
           cat README.md
 
