--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,10 +29,11 @@ jobs:
       - name: Get previous version
         id: get-previous-version
         run: |
-          previous_version=$(git show HEAD^:gradle.properties | grep '^version' | cut -d= -f2 | tr -d '[:space:]')
+          commit_hashes=$(git log -n 2 --pretty=format:"%H" -- gradle.properties)
+          echo "Commit hashes: $commit_hashes"
+          previous_version=$(echo "$commit_hashes" | head -n 1 | xargs git show | grep '^version' | cut -d= -f2 | tr -d '[:space:]')
           echo "Previous version: $previous_version"
           echo "::set-output name=prev_version::$previous_version"
-
 
       - name: Get current version
         id: get-current-version
