--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,6 @@ name: My test workflow
 
 on:
   push:
-    branches:
-      - main
-    paths:
-      - 'gradle.properties'
 
 env:
   COMMIT_MESSAGE: |
@@ -29,7 +25,7 @@ jobs:
       - name: Get previous version
         id: get-previous-version
         run: |
-          commit_hashes=$(git log)
+          commit_hashes=$(git rev-list -n 5 origin/main -- gradle.properties)
           echo "Commit hashes: $commit_hashes"
     
           second_last_commit_hash=$(echo "$commit_hashes" | tail -n 3)
