--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,10 @@ name: My test workflow
 
 on:
   push:
+    branches:
+      - main
+    paths:
+      - 'gradle.properties'
 
 env:
   COMMIT_MESSAGE: |
