--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,9 +57,12 @@ jobs:
       - name: Update README Badge
         run: |
           version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
-          version_safe=$(echo "$version" | sed 's#-#&#8208;#g')
+          echo "old version: $version"
+          version_safe=$(echo "$version" | sed 's/-/&#8208;/g')
+          echo "safe version: $version_safe"
           sed -i "s/\(badge\/version-v[0-9]\.[0-9]-blue\.svg\)/badge\/version-v$version_safe-blue.svg/" README.md
           cat README.md
+
 
 
       - name: Create PR
