--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,4 @@ android.useAndroidX=true
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=false
 
-version = 1.40-alpha
+version = 1.40-alphu
