--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,14 +50,14 @@ jobs:
         run: |
           echo "::set-output name=current_version::$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')"
 
-      - name: Check for version change
-        run: |
-          echo "Previous version: ${{ steps.get-previous-version.outputs.prev_version }}"
-          echo "Current version: ${{ steps.get-current-version.outputs.current_version }}"
-          if [ "${{ steps.get-previous-version.outputs.prev_version }}" = "${{ steps.get-current-version.outputs.current_version }}" ]; then
-            echo "No version change. Exiting workflow."
-            exit 0
-          fi
+      # - name: Check for version change
+      #   run: |
+      #     echo "Previous version: ${{ steps.get-previous-version.outputs.prev_version }}"
+      #     echo "Current version: ${{ steps.get-current-version.outputs.current_version }}"
+      #     if [ "${{ steps.get-previous-version.outputs.prev_version }}" = "${{ steps.get-current-version.outputs.current_version }}" ]; then
+      #       echo "No version change. Exiting workflow."
+      #       exit 0
+      #     fi
 
       - name: Update README Badge
         run: |
