--- a/.github/workflows/hiteshWorkflow.yml
+++ b/.github/workflows/hiteshWorkflow.yml
@@ -39,3 +39,9 @@ jobs:
           echo "data: $(git show $second_last_commit_hash:gradle.properties)"
           echo "Previous version: $previous_version"
           echo "::set-output name=prev_version::$previous_version"
+
+
+      - name: Jojo version
+        run: |
+          diff_po = $(git show)
+          echo "diff $diff_jo"
