--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,14 +82,14 @@ jobs:
           commit-message: ${{ env.COMMIT_MESSAGE }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Turn On PR Auto-Merge
-        run: >
-          gh pr merge --squash --auto
-          --repo ${{ github.repository }}
-          ${{ steps.create-pr.outputs.pull-request-number }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Turn On PR Auto-Merge
+      #   run: >
+      #     gh pr merge --squash --auto
+      #     --repo ${{ github.repository }}
+      #     ${{ steps.create-pr.outputs.pull-request-number }}
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Delete branch
-        run: |
-          git push origin --delete github-actions/readme-update
+      # - name: Delete branch
+      #   run: |
+      #     git push origin --delete github-actions/readme-update
