--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,28 +45,19 @@ jobs:
         run: |
           echo "::set-output name=current_version::$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')"
 
-      # - name: Check for version change
-      #   run: |
-      #     echo "Previous version: ${{ steps.get-previous-version.outputs.prev_version }}"
-      #     echo "Current version: ${{ steps.get-current-version.outputs.current_version }}"
-      #     if [ "${{ steps.get-previous-version.outputs.prev_version }}" = "${{ steps.get-current-version.outputs.current_version }}" ]; then
-      #       echo "No version change. Exiting workflow."
-      #       exit 0
-      #     fi
+      - name: Check for version change
+        run: |
+          echo "Previous version: ${{ steps.get-previous-version.outputs.prev_version }}"
+          echo "Current version: ${{ steps.get-current-version.outputs.current_version }}"
+          if [ "${{ steps.get-previous-version.outputs.prev_version }}" = "${{ steps.get-current-version.outputs.current_version }}" ]; then
+            echo "No version change. Exiting workflow."
+            exit 0
+          fi
 
       - name: Update README Badge
         run: |
-          # Extract version from gradle.properties
           version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
-          echo "old version: $version"
-    
-          # Encode hyphen if it exists in the version
-          version_safe=$(echo "$version" | sed 's/-/&#8208;/g')
-          echo "safe version: $version_safe"
-
-          # Replace the badge URL in README.md
-          sed -i "s/\(badge\/version-v[0-9]\.[0-9]-blue\.svg\)/badge\/version-v$version-blue.svg/g" README.md
-    
+          sed -i "s/\(badge\/version-v[0-9]\.[0-9]-blue\.svg\)/badge\/version-v$version-blue.svg/" README.md
           cat README.md
 
       - name: Create PR
@@ -82,14 +73,14 @@ jobs:
           commit-message: ${{ env.COMMIT_MESSAGE }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      # - name: Turn On PR Auto-Merge
-      #   run: >
-      #     gh pr merge --squash --auto
-      #     --repo ${{ github.repository }}
-      #     ${{ steps.create-pr.outputs.pull-request-number }}
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Turn On PR Auto-Merge
+        run: >
+          gh pr merge --squash --auto
+          --repo ${{ github.repository }}
+          ${{ steps.create-pr.outputs.pull-request-number }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # - name: Delete branch
-      #   run: |
-      #     git push origin --delete github-actions/readme-update
+      - name: Delete branch
+        run: |
+          git push origin --delete github-actions/readme-update
