--- a/.github/workflows/hiteshWorkflow.yml
+++ b/.github/workflows/hiteshWorkflow.yml
@@ -40,9 +40,7 @@ jobs:
 
       - name: Bojo version
         run: |
-          git log -3
-          diff_po=$(git log -3)
-          echo "diff $diff_jo"
+          echo "bojo {{github.event.pull_request.head.sha}}"
 
       - name: Optimus
         run: |
