--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,47 +20,17 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      # contents: write
+      contents: write
       pull-requests: write
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Get previous version
-        id: get-previous-version
-        run: |
-          commit_hashes=$(git rev-list -n 5 origin/main -- gradle.properties)
-          echo "Commit hashes: $commit_hashes"
-    
-          second_last_commit_hash=$(echo "$commit_hashes" | tail -n 3)
-          echo "Second-to-last commit hash: $second_last_commit_hash"
-    
-          previous_version=$(git show $second_last_commit_hash:gradle.properties | grep '^version' | cut -d= -f2 | tr -d '[:space:]')
-          echo "data: $(git show $second_last_commit_hash:gradle.properties)"
-          echo "Previous version: $previous_version"
-          echo "::set-output name=prev_version::$previous_version"
-
-      - name: Get current version
-        id: get-current-version
-        run: |
-          echo "::set-output name=current_version::$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')"
-
-      - name: Check for version change
-        run: |
-          echo "Previous version: ${{ steps.get-previous-version.outputs.prev_version }}"
-          echo "Current version: ${{ steps.get-current-version.outputs.current_version }}"
-          if [ "${{ steps.get-previous-version.outputs.prev_version }}" = "${{ steps.get-current-version.outputs.current_version }}" ]; then
-            echo "No version change. Exiting workflow."
-            exit 0
-          fi
-
       - name: Update README Badge
         run: |
           version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
           version=$(echo "$version" | sed 's/-/%E2%80%90/g')
-          echo "$version"
           sed -i "s/\(badge\/version-v.*-blue\.svg\)/badge\/version-v$version-blue.svg/" README.md
-          cat README.md
 
       - name: Create PR
         id: create-pr
