--- a/.github/workflows/hiteshWorkflow.yml
+++ b/.github/workflows/hiteshWorkflow.yml
@@ -27,7 +27,8 @@ jobs:
 
       - name: Checkout Repository1
         uses: actions/checkout@v4
-          
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Pojo version
         run: |
