--- a/.github/workflows/hiteshWorkflow.yml
+++ b/.github/workflows/hiteshWorkflow.yml
@@ -35,7 +35,10 @@ jobs:
         run: git diff
 
       - name: SOSO
-        run: git show
+        run: |
+          varrrr=$(git show)
+          echo "here: $varrrr"
+          
 
       - name: Checkout Repository
         uses: actions/checkout@v2
