--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,9 @@ jobs:
       - name: Update README Badge
         run: |
           version=$(grep '^version' gradle.properties | cut -d= -f2 | tr -d '[:space:]')
+          echo "1: $version"
           version=$(echo "$version" | sed 's/-/%E2%80%90/g')
+          echo "2: $version"
           sed -i "s/\(badge\/version-v.*-blue\.svg\)/badge\/version-v$version-blue.svg/" README.md
 
       - name: Create PR
