--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -80,14 +80,28 @@ jobs:
           commit-message: ${{ env.COMMIT_MESSAGE }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Turn On PR Auto-Merge
-        if: env.SKIP_NEXT_STEPS != 'true'
-        run: >
-          gh pr merge --squash --auto
-          --repo ${{ github.repository }}
-          ${{ steps.create-pr.outputs.pull-request-number }}
+      - name: Merge PR
+        run: |
+          PR_NUMBER=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          "https://api.github.com/repos/${{ github.repository }}/pulls?head=github-actions/readme-update" \
+          | jq -r '.[0].number')
+
+          curl -s -X PUT -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Accept: application/vnd.github.v3+json" \
+          "https://api.github.com/repos/${{ github.repository }}/pulls/${PR_NUMBER}/merge"
+
+          echo "Pull request merged!"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # - name: Turn On PR Auto-Merge
+      #   if: env.SKIP_NEXT_STEPS != 'true'
+      #   run: >
+      #     gh pr merge --squash --auto
+      #     --repo ${{ github.repository }}
+      #     ${{ steps.create-pr.outputs.pull-request-number }}
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Delete branch
         if: env.SKIP_NEXT_STEPS != 'true'
