--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,4 @@ android.useAndroidX=true
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=false
 # 
-version = 1.7-ppp1
+version = 1.7-pup1
